--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^0.33.6",
     "@rainbow-me/rainbowkit": "^2.0.5",
     "@tanstack/react-query": "^5.31.0",
     "axios": "^1.7.5",
@@ -18,6 +19,7 @@
     "ethers": "^6.13.3",
     "form-data": "^4.0.0",
     "fs": "0.0.1-security",
+    "identity": "link:@coinbase/onchainkit/identity",
     "modules": "link:@nomicfoundation/hardhat-ignition/modules",
     "next": "14.2.2",
     "path": "^0.12.7",
