--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.5",
+    "thirdweb": "^5.61.6",
     "viem": "^2.9.25",
     "wagmi": "^2.5.19"
   },
